--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,macos,linux,windows
+
+# Build Directory
+build
