--- a/package.json
+++ b/package.json
@@ -18,12 +18,23 @@
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run lint"
+    "posttest": "npm run lint",
+    "start": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" -r dotenv-expand/config src/index.ts"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^14.11.2",
+    "dotenv": "^16.0.3",
+    "dotenv-expand": "^10.0.0",
     "gts": "^3.1.1",
+    "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
+    "ts-node": "^10.9.1",
     "typescript": "~4.7.0"
+  },
+  "dependencies": {
+    "celebrate": "^15.0.1",
+    "express": "^4.18.2",
+    "http-status-codes": "^2.2.0"
   }
 }
