Add create want endpoint

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
+AUTH0_AUDIENCE=https://hello-my-friendo/api
+AUTH0_ISSUER_BASE_URL=https://dev-7q5fb8t5.auth0.com/
+AUTH0_TOKEN_SIGNING_ALG=RS256
+FIRESTORE_PROJECT_ID=dummy-project-id
+FIRESTORE_EMULATOR_PORT=8200
+FIRESTORE_EMULATOR_HOST=localhost:${FIRESTORE_EMULATOR_PORT}
 PORT=8080
