--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run lint",
-    "start": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" -r dotenv-expand/config src/index.ts"
+    "start": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" -r dotenv-expand/config src/index.ts",
+    "prestart": "npm run up:firestore",
+    "up:firestore": "docker compose up -d firestore_emulator --wait"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -33,8 +35,10 @@
     "typescript": "~4.7.0"
   },
   "dependencies": {
+    "@google-cloud/firestore": "^6.5.0",
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
+    "express-oauth2-jwt-bearer": "^1.3.0",
     "http-status-codes": "^2.2.0"
   }
 }
