--- a/package.json
+++ b/package.json
@@ -9,36 +9,52 @@
   ],
   "license": "SEE LICENSE IN LICENSE",
   "keywords": [],
+  "engines": {
+    "node": "18.15.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --runInBand --detectOpenHandles",
     "format": "prettier --write .",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
     "fix": "gts fix",
-    "prepare": "npm run compile",
-    "pretest": "npm run compile",
-    "posttest": "npm run lint",
+    "prepare": "npm run compile && husky install",
+    "posttest": "npm run compile",
     "start": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" -r dotenv-expand/config src/index.ts",
     "prestart": "npm run up:firestore",
     "up:firestore": "docker compose up -d firestore_emulator --wait"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
     "@types/node": "^14.11.2",
+    "@types/supertest": "^2.0.12",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
     "gts": "^3.1.1",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "jest-extended": "^3.2.4",
+    "lint-staged": "^13.1.2",
     "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "~4.7.0"
   },
   "dependencies": {
     "@google-cloud/firestore": "^6.5.0",
+    "axios": "^1.3.4",
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
     "express-oauth2-jwt-bearer": "^1.3.0",
     "http-status-codes": "^2.2.0"
+  },
+  "lint-staged": {
+    "*.{md,yaml}": "prettier --write",
+    "*.{js,ts}": "gts fix"
   }
 }
