--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "node": "18.15.0"
   },
   "scripts": {
-    "test": "jest --runInBand --detectOpenHandles",
-    "format": "prettier --write .",
-    "lint": "gts lint",
+    "prepare": "npm run compile && husky install",
     "clean": "gts clean",
     "compile": "tsc",
+    "format": "prettier --write .",
+    "lint": "gts lint",
     "fix": "gts fix",
-    "prepare": "npm run compile && husky install",
+    "test": "jest --runInBand --detectOpenHandles",
+    "pretest": "npm run up:firestore",
     "posttest": "npm run compile",
     "start": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" -r dotenv-expand/config src/index.ts",
     "prestart": "npm run up:firestore",
@@ -51,10 +52,11 @@
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
     "express-oauth2-jwt-bearer": "^1.3.0",
+    "geofire-common": "^6.0.0",
     "http-status-codes": "^2.2.0"
   },
   "lint-staged": {
-    "*.{md,yaml}": "prettier --write",
+    "*.{json, md,yaml}": "prettier --write",
     "*.{js,ts}": "gts fix"
   }
 }
