Add create friend request endpoint

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 AUTH0_AUDIENCE=https://hello-my-friendo/api
-AUTH0_ISSUER_BASE_URL=https://dev-7q5fb8t5.auth0.com
+AUTH0_ACCOUNT=dev-7q5fb8t5
+AUTH0_DOMAIN=${AUTH0_ACCOUNT}.auth0.com
+AUTH0_ISSUER_BASE_URL=https://${AUTH0_DOMAIN}
 AUTH0_TOKEN_SIGNING_ALG=RS256
-AUTH0_CLIENT_ID=i0QPbqiLxSbtqzq1to24uCZB1aCb2rOa
-AUTH0_CLIENT_SECRET=5pMS-N57dO58I9ln4U-5fuyqG6Ucjgmens36MQFC_EmL8ZQPS2u4JTstOpnbuLvS
+AUTH0_TEST_CLIENT_ID=i0QPbqiLxSbtqzq1to24uCZB1aCb2rOa
+AUTH0_TEST_CLIENT_SECRET=5pMS-N57dO58I9ln4U-5fuyqG6Ucjgmens36MQFC_EmL8ZQPS2u4JTstOpnbuLvS
 FIRESTORE_PROJECT_ID=dummy-project-id
 FIRESTORE_EMULATOR_PORT=8200
 FIRESTORE_EMULATOR_HOST=localhost:${FIRESTORE_EMULATOR_PORT}
