--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "gts lint",
     "fix": "gts fix",
     "test": "jest --runInBand --detectOpenHandles",
-    "pretest": "npm run up:firestore",
+    "pretest": "npm run down && npm run up:firestore",
     "posttest": "npm run compile && npm run down",
     "start": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" -r dotenv-expand/config src/index.ts",
     "prestart": "npm run up:firestore",
