--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@faker-js/faker": "^7.6.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^14.11.2",
     "@types/supertest": "^2.0.12",
     "dotenv": "^16.0.3",
@@ -54,7 +55,8 @@
     "express": "^4.18.2",
     "express-oauth2-jwt-bearer": "^1.3.0",
     "geofire-common": "^6.0.0",
-    "http-status-codes": "^2.2.0"
+    "http-status-codes": "^2.2.0",
+    "lodash": "^4.17.21"
   },
   "lint-staged": {
     "*.{json, md,yaml}": "prettier --write",
